# Atlas

./: .env.example  .gitignore  AGENTS.md  Makefile  Procfile  config.py  constants.py  dependencies.py  exceptions.py  main.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start_agent.py
api/: __init__.py  instantly_webhook.py  razorpay_webhook.py
core/: agent.py  autopilot.py  campaign_orchestrator.py  constitution.py  decision_engine.py  lead_email_gate.py  lead_fetcher.py  lead_hunter.py  lead_maps.py  lead_resume.py  lead_sources.py  loop.py  memory_manager.py  state_machine.py
dashboard/: __init__.py  api.py  app.py  jobs.py  prefs.py
data/: affiliate_programs.json  autopilot_state.json  autopilot_targets.json  cities.json  close_approval_index.json  email_blacklist.txt  hostinger_sites.example.json  hostinger_sites.json  icebreaker_fewshot.txt  instantly_reply_state.json  lead_package_tiers.json  leads.example.csv  netlify_accounts.example.json  niches.json  outreach_domains.example.json  outreach_domains.json  pricing_tiers.json  spam_words.txt
database/: base.py  connection.py  migrations.py  session.py
docs/: AGENT_EARNING_METHODS.md  BUSINESS_EMAIL_SETUP.md  DATABASE.md  DEMO_HOSTING.md  DEMO_HOSTING_OPTIONS.md  EMAIL_SENDING_SIMPLE.md  GAURAVXD_R2_DOMAIN.md  HOSTINGER_DEMO_SETUP.md  HOSTINGER_MULTI_DOMAIN.md  INSTANTLY_CAMPAIGN_SETUP.md  INSTANTLY_HOSTINGER_SETUP.md  INSTANTLY_SETUP.md  MIKEY_EMAIL_STRATEGY.md  NETLIFY_DEMO_SETUP.md  NEXT_PHASE.md  PAYMENTS.md  PRODUCTION_RUN.md  RAILWAY.md  REPLY_SYNC.md  (+1 more)
llm/: base.py  (+1 more)
(+175 files in other folders)
